--- a/study-plan.Rmd
+++ b/study-plan.Rmd
@@ -10,21 +10,21 @@ output: pdf_document
 
 Introduction 
 ============
-Trauma is defined as the clinical entity composed of both physical injury and the body’s associated response. [MeSH] Trauma patients are a heterogenous group with wide range of different causes where some of the most prominent ones are traffic related injuries, falls, self-harm, interpersonal violence and burns. It is a global health problem and the total number of injuries is estimated to be at least 520 million cases per year. [@James2020] The effects of trauma on patients and their families can be divided into non-fatal and fatal trauma.
+Trauma is defined as the clinical entity composed of both physical injury and the body’s associated response. [MeSH] Trauma patients are a heterogeneous group with a wide range of different causes the most prominent ones are traffic related injuries, falls, self-harm, interpersonal violence and burns. Trauma is a global health problem and the total number of injuries<!-- Do you mean patients with injuries?--> is estimated to be at least 520 million cases per year. [@James2020] 
 
-The effects of non-fatal trauma can be subdivided into Disability Adjusted Life Years (DALY) lost and economical effects. DALY is a measurement using both the mortality in years lost between death and mean age and morbidity as in years lived with reduced function due to the disease. In 2017 trauma accounted for 13% of total DALY lost. [@GBD2017DALY] The economic effects in turn regards both the out of pocket expenses for treatments as well as reduced productivity due to reduced ability after the injury. A study in northern India from 2019 calculated that 22% of patients who presented with traumatic injuries afterward had 30% or more of their total expenditure on healthcare related costs and 12 % were pushed below the international poverty line as a consequence. [@Prinja2019]
+The effects of trauma on patients and their families can be divided into non-fatal and fatal trauma. The effects of non-fatal trauma can be subdivided into Disability Adjusted Life Years (DALY) lost and economical effects. DALY is a measurement using both the mortality in years lost between mean age and death and morbidity as in years lived with reduced function due to the disease. In 2017 trauma accounted for 13% of total DALY lost globally. [@GBD2017DALY] The economic effects are both out of pocket expenses for treatment as well as reduced ability to work after injury. A study in northern India from 2019 calculated that 22% of patients who presented with traumatic injuries afterward had 30% or more of their total expenditure on healthcare related costs and 12 % were pushed below the international poverty line as a consequence. [@Prinja2019]
 
-Regarding the effect of traumatic injuries on mortality in 2017 trauma accounted for 8% of total global deaths. [@GBD2017DALY] According to calculations done by Mock et al. [@Mock2012] 90% of all deaths due to trauma were in low and middle income countries which also had a fatality rate 60-80% higher than that of high income countries and an improvement in trauma care globally to the level of that in high income countries could save about 1.7 lives annually, or about one third of the global deaths due to trauma.
+Regarding the effect of trauma on mortality in 2017 trauma accounted for 8% of total global deaths. [@GBD2017DALY] According to calculations done by Mock et al. [@Mock2012] 90% of all deaths due to trauma were in low and middle income countries which also had a fatality rate 60-80% higher than that of high income countries and an improvement in trauma care globally to the level of that in high income countries could save about 1.7 lives annually, or about one third of the global deaths due to trauma.
 
-It is known that most fatalities in response to traumatic injuries occur shortly after the injury and in order to reduce the mortality in patients with severe trauma it requires early intervention, often surgical, as by “the golden hour” concept. This is often due to patients suffering from internal and external bleeding where surgery is an important part of the hemorrhage control. [@King2019] It is evident that in parts of the world with fewer hospitals, reduced access to healthcare and a less developed ambulance networks the time parameter is one of the contributing factors to the difference in increased mortality as mentioned. 
+It is known that most fatalities in response to traumatic injuries occur shortly after the injury and to reduce the mortality in patients with severe trauma requires early intervention, often surgical, as by the “golden hour” concept. This is often due to patients suffering from internal and external bleeding where surgery is an important part of the hemorrhage control. [@King2019] In parts of the world with fewer hospitals, reduced access to health care and less developed prehospital systems the time parameter is one of the contributing factors to higher mortality.
 
 For patients with severe infections the Sequential Organ Failure Assessment (SOFA) score was developed in 1994 to grade the level of organ dysfunction in critically ill patients. The SOFA score is based on the reduced function scored 0-4 for each of the respiratory, cardiovascular, neurological, hepatic, coagulation and renal systems. Initially the focus was mainly patients suffering from severe infections and sepsis, but it was early recognized to be applicable in a wide range of critical illnesses. [@Lambden2019] 
 
-Alongside the last revision of the sepsis definition in 2016 the quick Sequential Organ Failure Assessment score (qSOFA score) was developed. The qSOFA score includes three parameters: Systolic blood pressure (SBP) below 100 mmHg, a respiratory rate (RR) above 22 min and an altered consciousness, measured with a Glasgow Coma Scale (GCS) score below 15. One point is awarded for each parameter yielding a total score of 0-3. Introduced as a screening tool, to be performed bedside to identify patients with high-risk of organ dysfunction due to infections. [@David2017],[@Shankar2016] It has lately also shown ability to predict mortality in patients with traumatic injuries when used both in prehospital care [@Miyamoto2019] as well as repeated evaluation during hospitalization [@Miyamoto2020].
+Alongside the last revision of the sepsis definition in 2016 the quick Sequential Organ Failure Assessment score (qSOFA score) was developed. The qSOFA score includes three parameters: Systolic blood pressure (SBP) below 100 mmHg, a respiratory rate (RR) above 22 min and an altered consciousness, measured with a Glasgow Coma Scale (GCS) score below 15. One point is awarded for each parameter yielding a total score of 0-3. Introduced as a screening tool, to be performed bedside to identify patients with high-risk of organ dysfunction due to infections. [@David2017],[@Shankar2016]<!-- Is suggest that you combine references like [@David2017; @Shankar2010] to have them correctly rendered -->qSOFA has lately also been shown to predict mortality in trauma patients both in prehospital and hospital settings [@Miyamoto2019; @Miyamoto2020].
 
-Another tool to assess the severity of a patient’s condition due to trauma is the Revised Trauma Score (RTS) and the Triage Revised Trauma Score (T-RTS) composed of the same parameters as qSOFA, that is GCS, SBP and RR but with a score of 0-4 for each parameter instead of a single criteria. The scores can either be presented individually as used in RTS or added together to a total of 0-12 used in the T-RTS. The RTS thought of to be used in outcome evaluation and assessment of injury severity and the T-RTS for triage and finding patients a prehospital or initial setting in most need of specialized trauma care [@Champion1989] However there are some articles raising concerns about the sensitivity of the T-RTS depending on the type of injury. [@Giannakopoulos2011],[@Alvarez2016]
+Another tool to assess the severity of a patient’s condition due to trauma is the Revised Trauma Score (RTS) and the Triage Revised Trauma Score (T-RTS), which include the same parameters as qSOFA - GCS, SBP and RR - but with a score of 0-4 for each parameter instead of a single criteria. The scores can either be presented individually as used in RTS or added together to a total of 0-12 used in the T-RTS. RTS was intended for outcome evaluation and assessment of injury severity and the T-RTS for triage and finding patients a prehospital or initial setting in most need of specialized trauma care [@Champion1989] However there are some articles raising concerns about the sensitivity of T-RTS depending on the type of injury. [@Giannakopoulos2011],[@Alvarez2016]
 
-Because of the inherent urgency and complexity in trauma care it is vital to have an initial scoring system that is both simple to perform and that does not need laboratory nor other advanced measuring equipment. For this reason, the SOFA score can be said to use too advanced techniques and the T-RTS with its many subdividing cut-offs to be too complicated. The choice of using qSOFA is thus because of its promising signs in other studies and because of the possible clinical advantage in its simplicity.  
+Because of the inherent urgency and complexity in trauma care it is vital to have an initial scoring system that is both simple to perform and that does not need laboratory nor other advanced measuring equipment. For this reason, the SOFA score can be said to use too advanced techniques and the T-RTS with its many categories to be too complicated. The choice of using qSOFA is thus because of its promising signs in other studies and because of the possible clinical advantage in its simplicity.  
 
 It should also be noted that the majority of the research done on the topic of trauma and trauma care has been performed in high income countries. It is thus not clear if the results are also applicable in low resource settings, which arguably stand to benefit the most of a scoring system to be able to prioritize the limited resources at hand. Furthermore, most studies report the predictive power of different scoring systems on mortality and it has not yet been sufficiently studied whether an initial qSOFA score can be used to predict admissions to an intensive care unit and thus aid in the direct clinical treatment of trauma patients.
 
@@ -226,32 +226,34 @@ Discussion
 ========
 
 <!-- aim and how it went, --->
-The aim of this study was to asses the validity of the qSOFA score in predicting ICU admissions in trauma patients. In the context of urban Indian hospitals the original qSOFA score with its original cutoffs and coefficients did not accurately predict ICU admission. The original model underestimated the probability of ICU admission as can be seen in _FIGURE showing ICI plots_. When updating the model adjusting the cutoffs and coefficients the new model performs significantly better both regarding the ICI and AUC.
+The aim of this study was to asses the validity of the qSOFA score in predicting ICU admissions in trauma patients. In the context of urban Indian hospitals the original qSOFA score with its original cutoffs and coefficients did not accurately predict ICU admission. The original model underestimated the probability of ICU admission as can be seen in _FIGURE showing ICI plots_. When updating the model adjusting the cutoffs and coefficients the new model performs significantly better both in terms of ICI and AUC.
 
 
 <!-- usage and implication -->
-The estimated probabilities for the new model ranges from `r boot.cis$est.prob.sum.new.none[["pe"]]` to `r boot.cis$est.prob.sum.new.three[["pe"]]`. Where the highest value, corresponding to a score of three, can be said to be a clear overestimation and not accounting for a large portion of patients. A more realistic span is that off 0-2 points, or a probability of `r boot.cis$est.prob.sum.new.none[["pe"]]` to `r boot.cis$est.prob.sum.new.two[["pe"]]` percent. Because of this relatively high base probability of `r boot.cis$est.prob.sum.new.none[["pe"]]`% the updated model can not in itself be used to exclude patients with a low score from the future need of intensive care. Nor can it with certainty predict that patients with a high score will be admitted to the ICU although there exists a significantly higher risk that they will.  
+The estimated probabilities for the new model ranges from `r boot.cis$est.prob.sum.new.none[["pe"]]` to `r boot.cis$est.prob.sum.new.three[["pe"]]`. Where the highest value, corresponding to a score of three, can be said to be a clear overestimation and not accounting for a large portion of patients<!-- I've read this sentence multiple times but I don't get it. Can you try to revise, what do you mean by "not accounting for a large portion of patients"?-->. A more realistic span is that off 0-2 points, or a probability of `r boot.cis$est.prob.sum.new.none[["pe"]]` to `r boot.cis$est.prob.sum.new.two[["pe"]]` percent<!-- Same here, not obvious to me what this means -->. Because of this relatively high base line probability of `r boot.cis$est.prob.sum.new.none[["pe"]]`% the updated model can not in itself be used to exclude patients with a low score from the future need of intensive care. Nor can it with certainty predict that patients with a high score will be admitted to the ICU although there exists a significantly higher risk that they will.  
 
-Contrast this to the original use of the qSOFA score where a score of 0 correspond to a mortality of 1  <!-- approx taken from figure --> percent and a score of 2-3 correspond to a much higher mortality of 7-20 %<!-- taken from figure ish-->. This makes the original qSOFA in the context of screening for risk of dying due to severe infections a good tool to sort patients with a low score to also be of a low risk of dying.
+This can be contrasted with the original use of the qSOFA score for which a score of 0 corresponded to a mortality of 1  <!-- approx taken from figure --> percent and a score of 2-3 correspond to a much higher mortality of 7-20 %<!-- taken from figure ish-->. This makes the original qSOFA in the context of screening for risk of dying due to severe infections a good tool to sort patients with a low score to also be of a low risk of dying.
 
 <!-- It can also be noted that out of the three parameters used in the updated model only GCS was significantly associated with a higher risk of ICU admission. This can be partially explained by that new cutoffs where calculated for each bootstrap resulting in different cutoffs being evaluated resulting in an increased uncertainty. It could also be that RR and SBP does not have a significant correlation to ICU admission. Although the data suggest that there is a correlation and therefore a possibility of using it in the formation of a predictive model the result is not significant. --> <!-- körde om bootstrapen igen och då fick jag ett annat resultat så stryker denna för nu... -->
 
 <!--limitations --->
 
-Because of the composition and context of the TITCO database the results are likely to be generalizable to similar settings, that is to other urban hospitals of similar economic and resource level. <!-- Why do you think that?,,, similar settings should result in similar results? or should i formulate it in another way?-->. It is not clear whether the results can be used in rural settings or setting with higher or lower resource levels. 
+Because of the composition and context of the TITCO database the results are likely to be generalizable to similar settings, that is to other urban hospitals of similar economic and resource level. It is not clear whether the results can be used in rural settings or setting with higher or lower resource levels. 
 
 It should also be noted that `r  p.transported` of the patients where for an unspecified time first treated at another hospital and then later transferred to one of the participating hospitals. Because of this the parameters used in this study only shows the first ones taken at arrival to the participating hospital and not always the first ones taken after the injury and does not take into account any interventions performed before arrival or between arrival and admission to the ICU.
 
-Furthermore out of the `r results$n.adults` patients above the age of 18 only `r results$n.complete` had complete data, or `r results$n.complete/results$n.adults`%. With this amount of missing data it is unclear if the data can be said to be missing completely at random or if there are any underlying factors contributing to the missing of data that could skew the results leading to a higher uncertainty regardless of bootstraping<!-- Does the amount of missing data really say anything about the pattern of missing data?--> <!-- No and thas what i want to caspulate that we can not now... so I still want to add something about the amount of missing data but not sure how... --> .
+Furthermore out of the `r results$n.adults` patients above the age of 18 only `r results$n.complete` had complete data, or `r results$n.complete/results$n.adults`%. With this amount of missing data it is unclear if the data can be said to be missing completely at random or if there are any underlying factors contributing to the missing of data that could skew the results leading to a higher uncertainty regardless of bootstraping<!-- Does the amount of missing data really say anything about the pattern of missing data?--> <!-- No and thas what i want to caspulate that we can not now... so I still want to add something about the amount of missing data but not sure how... --> <!-- You can compare the amount of missing data to other studies and you can reflect on the selection bias that is introduced by only analysing complete cases-->.
 
 [@Miyamoto2020] Comparing this to the results by Miyamoto on trauma patients in Japan where they looked at the qSOFA scores predictive power on mortality they showed that in their sample an elevated qSOFA score of 2-3 upon arrival to the hospital had an odds ratio compared with that of a score of 0 of 2.92-4.84 depending on the prehospital score. They also calculated that in their sample qSOFA had an AUC of 0.69-0.76.
 
-Another comparrison can be made to that of the development In its original context the qSOFA model had an AUC for mortality of 0.66 for patients treated at the ICU and 0.81 for patients without ICU encounters. The original OR for the parameters can be seen in table 2. (orginalkällan) 
+Another comparison can be made to that of the development In its original context the qSOFA model had an AUC for mortality of 0.66 for patients treated at the ICU and 0.81 for patients without ICU encounters. The original OR for the parameters can be seen in table 2. (orginalkällan)<!-- What are you comparing this to? Are you comparing the findings of Miyamoto with the findings of the original qSOFA paper? This needs to be clarified --> 
 
-Although these studies looked at mortality and not ICU admission one can see that both the mentioned studies had a comparable but slightly higher AUC and a higher OR than can be shown in this study. This is to be somewhat expected since it can be argued that although there is a connection between ICU admission and mortality through severity of that patients condition there were patients who died without being treated in the ICU. The reason for this is not certain but one can argue that this is because the patients condition was such that the patients either died before they could be admitted to the ICU, the doctors decided that intensive care would not be of benefit for the patient, or due to a lack of resources or ICU beds such that patients had to be prioritized for intensive care and not all patients who would benefit from it got admitted to the ICU. For context the number of ICU beds per 100 000 people is 2.3 in India compared with for example 7.3 in Japan. (Källa 19)
+Although these studies looked at mortality and not ICU admission one can see that both the mentioned studies had a comparable but slightly higher AUC and a higher OR than can be shown in this study. This is to be somewhat expected since it can be argued that although there is a connection between ICU admission and mortality through severity of that patients condition there were patients who died without being treated in the ICU<!-- Do you mean that both probability of mortality and probability of ICU admission can be considered measures of injury severity?-->. The reason for this<!-- Reasons for what exactly?--> is not certain but one can argue that this is because the patients condition was such that the patients either died before they could be admitted to the ICU, the doctors decided that intensive care would not be of benefit for the patient, or due to a lack of resources or ICU beds such that patients had to be prioritized for intensive care and not all patients who would benefit from it got admitted to the ICU. For context the number of ICU beds per 100 000 people is 2.3 in India compared with for example 7.3 in Japan. (Källa 19)
 
 <!--It's a bit all over the place right now lacking a common thread but i wanted to add all the parts first and then adjust and rearange depending on your feedback --> 
 
+
+<!-- Add strengths and limitations, implications for future research and practice, and conclusions -->
 
 ## Questions:
 
