Comment on discussion

--- a/study-plan.Rmd
+++ b/study-plan.Rmd
@@ -198,6 +198,7 @@ Abbreviations: AUC Area under the curve, ICI Integrated calibration index
 
 Discussion
 ========
+<!-- I would say that you cover the important parts but check that you fulfill the KI criteria regarding the extent of the discussion, i.e. the number of pages. You could elaborate on the limitations and how your updated score can be used in practice, if you need to add more text.-->
 
 <!-- aim and how it went, --->
 The aim of this study was to asses the validity of the qSOFA score in predicting ICU admissions in trauma patients. We found that in the context of urban Indian hospitals the original qSOFA score with its original cutoffs and coefficients did not accurately predict ICU admission. The original model underestimated the probability of ICU admission as can be seen in _FIGURE showing ICI plots_. When updating the model adjusting the cutoffs and coefficients the new model performs significantly better in terms of ICI and slightly better in terms of AUC. 
@@ -211,11 +212,11 @@ The aim of this study was to asses the validity of the qSOFA score in predicting
 
 While developing the original qSOFA score as a screening tool for patients with an increased risk of dying from severe infection it was shown that a low score of 0-1 corresponded to a mortality of approximately 1-2 percent and that a high score of 2-3 corresponded to a significantly higher mortality of 7-20 %. When using the predetermined cutoff value of 2 points this result made the original qSOFA a useful tool to be able to sort patients with a low score to also be of a low risk of dying. On the other hand the results also allowed for that patients with a higher score could be more closely monitored and get access to treatment before more severe symptoms developed. 
 
-Contrast this to the results from the updated model used in the context of predicting ICU admission of trauma patients as have been done in this study. Our findings shows that a low score of 0-1 correspond to a probability for ICU admission of `r boot.cis$est.prob.sum.new.none[["pe"]]`-`r boot.cis$est.prob.sum.new.one[["pe"]]`% and a high score of 2-3 correspond to a mortality of `r boot.cis$est.prob.sum.new.two[["pe"]]`-`r boot.cis$est.prob.sum.new.three[["pe"]]` %. This shows that regardless of the score the patients still have a relatively high risk for ICU admission. Although a higher score is shown to correlate with a higher risk of ICU admission it is not clear what clinical relevance this score would have in the process of deciding the adequate level of care for patients with severe injuries. <!-- I think this better helps me to get my point across that the results are not clear enough that so it will not be possible to use the updated score in this context the same way as the original score was used the that context. -->
+In contrast, with our updated qSOFA for predicting ICU admission in trauma patients a low score of 0-1 correspond to a probability for ICU admission of `r boot.cis$est.prob.sum.new.none[["pe"]]`-`r boot.cis$est.prob.sum.new.one[["pe"]]`% and a high score of 2-3 correspond to a mortality of `r boot.cis$est.prob.sum.new.two[["pe"]]`-`r boot.cis$est.prob.sum.new.three[["pe"]]` %. This shows that regardless of the score the patients still have a relatively high risk for ICU admission. Although a higher score is shown to correlate with a higher risk of ICU admission it is not clear what clinical relevance this score would have in the process of deciding the adequate level of care for patients with severe injuries. <!-- I think this better helps me to get my point across that the results are not clear enough that so it will not be possible to use the updated score in this context the same way as the original score was used the that context. --><!-- Definitely much better now. The question is then, what can it be used for?-->
 
-The results also showed that out of the parameters included in the qSOFA respiratory rate was not significantly associated with a higher risk of ICU admission, OR of `r ors[["new.rr_score"]]`. This can be partially explained by that a new cutoff was calculated for each bootstrap resulting in different cutoffs being used while evaluating the model in turn leading to an increased uncertainty. Further research is needed before the original or an updated qSOFA score as presented in this study can be used in clinical desicionmaking.   
+The results also showed that out of the parameters included in the qSOFA respiratory rate was not significantly associated with a higher risk of ICU admission, OR of `r ors[["new.rr_score"]]`. This can be partially explained by that a new cutoff was calculated for each bootstrap resulting in different cutoffs being used while evaluating the model in turn leading to an increased uncertainty. Further research is needed before the original or an updated qSOFA score as presented in this study can be used in clinical decision making.   
 
-Although no other studies have been done correlating qSOFA to ICU admission studies have explored the conection between qSOFA and mortality both regarding patients with risk for sepsis [Orgianlkälla] and trauma patients.[@Miyamoto2020] Both these studies show that there is a clear connection between the qSOFA score and mortality and that the ORs as well as the AUCs is higher when looking at mortality in both studies compared to the results for this study. Although the AUCs only differ slightly. It can be argued that both ICU admission and mortality results from a more severe patient condition and thus will be correlated. However it should be noted that there exists patients who died without being admitted to the ICU reducing this correlation. This could be partly because patient where so severely injured that they either died before being able to be transferred to the ICU or it was decided that intensive care would not be of use for the patients. But it could also be due to a lack of ICU beds in the participating hospitals such that patients had to be prioritized for intensive care and not all patients who would benefit from it got admitted to the ICU. For context the number of ICU beds per 100 000 people is 2.3 in India compared with for example 7.3 in Japan. (Källa 19) To be able to explore this question more thoroughly further research is needed. 
+Although no other studies have been done correlating qSOFA to ICU admission studies have explored the conection between qSOFA and mortality both regarding patients with risk for sepsis [Orgianlkälla] and trauma patients.[@Miyamoto2020] Both these studies show that there is a clear association between the qSOFA score and mortality and that the ORs as well as the AUCs is higher when looking at mortality in both studies compared to the results for this study. Although the AUCs only differ slightly<!-- Try to connect this sentence with the earlier part of this paragraph-->. It can be argued that both ICU admission and mortality results from a more severe patient condition and thus should be correlated. However it should be noted that there exists patients who died without being admitted to the ICU reducing this correlation. This could be partly because these patient were so severely injured that they either died before being able to be transferred to the ICU or it was decided that intensive care would not be of use for the patients. But it could also be due to a lack of ICU beds in the participating hospitals such that patients had to be prioritized for intensive care and not all patients who would benefit from it got admitted to the ICU. For context the number of ICU beds per 100 000 people is 2.3 in India compared with for example 7.3 in Japan. (Källa 19) To be able to explore this question more thoroughly further research is needed. 
 
 The study had several limitations. First the data collected for the TITCO database came from a homogeneous group of participating hospitals all in urban settings in India. Because of this it is not clear that the results presented here are generalizable to for example hospitals with a rural location or a different economic level. 
 
